fix: Update z-index value in sideNav.module.css

--- a/app/Components/SideNav/sideNav.module.css
+++ b/app/Components/SideNav/sideNav.module.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1000;
+  z-index: 999;
 }
 
 .container {
